--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">MinesWeeper</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_mine_field">MineField</string>
+    <string name="your_time_was">Your time was %1$s</string>
 </resources>
