--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,21 @@
 <resources>
+    <!-- Common strings-->
+    <string name="common_yes">Yes</string>
+    <string name="common_no">No</string>
+
     <string name="app_name">MinesWeeper</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_mine_field">MineField</string>
+    <string name="action_records">Records</string>
+    <string name="action_logout">Log Out</string>
+    <string name="google_sign_in_message">To start, use your Google account to sign in</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_mine_field">MineFieldActivity</string>
+    <string name="title_activity_settings">SettingsActivity</string>
+    <string name="title_activity_records">RecordsActivity</string>
     <string name="your_time_was">Your time was %1$s</string>
+    <string name="settings_dialog_title">Settings</string>
+    <string name="settings_dialog_msg">Do you want to save your settings changes?</string>
+    <string name="settings_no_mines_entered">Number of mines must be entered</string>
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
@@ -14,4 +27,12 @@
     <string name="login_failed">"Login failed"</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!-- Preference strings -->
+    <string name="key_number_of_mines">number_of_mines_pref</string>
+
+    <string name="mine_field_header">Mine Field</string>
+    <string name="number_of_mines_title">Number of mines</string>
+
+    <string name="settings_save_button">Save and return</string>
 </resources>
